Attempt to fix gnarly positioning bug on iOS

--- a/css/nba-recordigami.css
+++ b/css/nba-recordigami.css
@@ -1153,6 +1153,8 @@ span.twitter-typeahead .tt-suggestion.tt-cursor:hover {
 }
 #scrolly-side .scrolly article {
   max-width: 15rem;
+  z-index: 100;
+  transform: translate3d(0, 0, 200px);
 }
 #scrolly-side .scrolly article .step-intro {
   min-height: 1vh;
@@ -1160,7 +1162,6 @@ span.twitter-typeahead .tt-suggestion.tt-cursor:hover {
   background-color: transparent;
 }
 #scrolly-side .scrolly article .step-outro position relative {
-  z-index: 0;
   min-height: 10vh;
   margin-bottom: 0rem;
   background-color: transparent;
@@ -1216,13 +1217,14 @@ span.twitter-typeahead .tt-suggestion.tt-cursor:hover {
 }
 #scrolly-side .scrolly article .step {
   position: relative;
-  z-index: 50;
   min-height: 50vh;
   margin-bottom: 3rem;
   background-color: transparent;
   -webkit-transition: background-color 250ms ease-in-out;
   -o-transition: background-color 250ms ease-in-out;
   transition: background-color 250ms ease-in-out;
+  -webkit-transform: translate3d(0,0,100);
+  z-index: 100;
 }
 #scrolly-side .scrolly article .step:last-of-type {
   margin-bottom: 0;
@@ -1283,7 +1285,8 @@ span.twitter-typeahead .tt-suggestion.tt-cursor:hover {
   bottom: 4rem;
   top: 6rem;
   left: 0;
-  z-index: 25;
+  -webkit-transform: translate3d(0,0,10);
+  z-index: 10;
 }
 @media (max-width: 10000px) {
   #scrolly-side .scrolly {
@@ -1299,6 +1302,8 @@ span.twitter-typeahead .tt-suggestion.tt-cursor:hover {
     max-width: 400px;
     margin: 0 auto;
     position: relative;
+    transform: translate3d(0, 0, 200px);
+    z-index: 100;
   }
   #scrolly-side .scrolly article .step-intro {
     max-height: 1vh;
@@ -1310,10 +1315,12 @@ span.twitter-typeahead .tt-suggestion.tt-cursor:hover {
     margin-bottom: 3rem;
     background-color: transparent;
     position: relative;
-    z-index: 0;
+  }
+  #scrolly-side .scrolly article .step {
+    -webkit-transform: translate3d(0,0,100);
+    z-index: 100;
   }
   #scrolly-side .scrolly article .step position relative {
-    z-index: 50;
     min-height: 100vh;
     margin-top: 30vh;
   }
@@ -1361,7 +1368,8 @@ span.twitter-typeahead .tt-suggestion.tt-cursor:hover {
     margin: 0;
     top: 17vh;
     left: 0;
-    z-index: 25;
+    -webkit-transform: translate3d(0,0,10);
+    z-index: 10;
   }
 }
 @media (max-width: 1000px) {
